# aoc

./: .gitignore  CMakeLists.txt  conanfile.txt
2019/: CMakeLists.txt  meson.build
2019/conan_test/: CMakeLists.txt  conan_test.cpp
2019/day01/: CMakeLists.txt  day01.cpp  main.cpp
2019/day02/: CMakeLists.txt  day02.cpp  day02.h
2019/day03/: CMakeLists.txt  day03.cpp
2019/day04/: CMakeLists.txt  day04.cpp
2020/: CMakeLists.txt
2020/day01/: CMakeLists.txt  day01.cpp
2020/day02/: CMakeLists.txt  day02.cpp
2020/day03/: CMakeLists.txt  day03.cpp  input.h
2020/day04/: CMakeLists.txt  day04.cpp  input.h
2020/day05/: CMakeLists.txt  day05.cpp  input.h
2020/day06/: CMakeLists.txt  day06.cpp  input.h
2020/day07/: CMakeLists.txt  day07.cpp  input.h
2020/day08/: CMakeLists.txt  day08.cpp  input.h
2020/day09/: CMakeLists.txt  day09.cpp  input.h
2022/s01/: Cargo.toml
2022/s02/: Cargo.toml
2022/s02/src/: main.rs
2022/s03/: Cargo.toml
2022/s03/src/: main.rs
2022/s04/: Cargo.toml
2022/s04/src/: main.rs
2022/s05/: Cargo.toml
2022/s05/src/: main.rs
2022/s06/: Cargo.toml
2022/s06/src/: main.rs
2024/src/: day01.rs  day02.rs  day03.rs
2024/src/day01/: input.rs
2024/src/day02/: input.rs
2024/src/day03/: input.rs
